Levels base structure

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,4 +3,7 @@
     <ul>
         <li ng-repeat="zaets in awesomeThings | filter: fil">{{zaets}}</li>
     </ul>
+    <ul>
+    	<li ng-repeat="level in levelsData">{{level}}</li>
+    </ul>
 </div>
