--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,79 +1,24 @@
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
+ /*
+    CSS Tree:
+    -
+    - Common
+ */
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
+* {margin: 0;padding: 0; font-family: 'Open Sans', sans-serif; user-select: none; font-size: 12px;}
+body {background-color: #fff;}
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
+#wrapper {}
+  #games-list {background-color: gray;}
+    #games-list ul {list-style: none;}
+      #games-list ul li {float: left;}
+        #games-list ul li:not(:last-child) {margin-right: 15px;}
+          .game-link {text-decoration: none; color: #333;}
+            .game-link:hover {color: #fff;}
+  header {}
+    header h1 {float: left;}
+    header nav {float: right;}
+      .header-navigation {list-style: none;}
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
+/* ===== Common styles ===== */
+.clearfix::after {font-size: 0;content: ".";display: block;height: 0;clear: both;visibility: hidden;}
