--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,7 +5,11 @@
  */
 
 * {margin: 0;padding: 0; font-family: 'Open Sans', sans-serif; user-select: none; font-size: 12px;}
-body {background-color: #fff;}
+body {background-color: #0B1317; color: #5F666A;}
+
+
+a {color: #6E7163; text-decoration: none;}
+  a:hover {color: #fff;}
 
 #wrapper {}
   #games-list {background-color: gray;}
@@ -14,11 +18,19 @@ body {background-color: #fff;}
         #games-list ul li:not(:last-child) {margin-right: 15px;}
           .game-link {text-decoration: none; color: #333;}
             .game-link:hover {color: #fff;}
-  header {}
-    header h1 {float: left;}
-    header nav {float: right;}
+  header.page {}
+    header.page h1 {float: left;font-size: 20px; padding: 10px; color:#BFC2C4;}
+    header.page nav {float: right;}
       .header-navigation {list-style: none;}
+        .header-navigation li {float: left;}
+          .header-navigation li:not(:last-child) {margin-right: 10px;}
+          .header-navigation li a {line-height: 45px; padding: 3px 6px; background-color: #fff;}
+            .header-navigation li a:hover {background-color: #CCC9C9;} 
 
 
+
+
+/* ===== Temp styles ===== */
+  .level-link {cursor: pointer;}
 /* ===== Common styles ===== */
 .clearfix::after {font-size: 0;content: ".";display: block;height: 0;clear: both;visibility: hidden;}
