--- a/app/views/levels/golf.html
+++ b/app/views/levels/golf.html
@@ -1,21 +1,25 @@
 <section ng-controller="GolfCtrl">
-    <div>{{name}}</div>
+    <h1 class="level-title">{{selectedLevel.name}}</h1>
 
-    <div>
-        <ul>
+    <article class="level-results clearfix">
+    	<ul>
             <li ng-repeat="succ in selectedLevel.data.successed" ng-class="getClass($index, 'successed')">{{succ}}</li>
         </ul>
-
-    </div>
-    <div>
         <ul>
             <li ng-repeat="fail in selectedLevel.data.failed" ng-class="getClass($index, 'failed')">{{fail}}</li>
         </ul>
-    </div>
+    </article>
+	
+	<article class="level-controls clearfix">
+		<input type="text" class="regexp-field" ng-model="regexp"/>
+		<button ng-click="testRegexp()">Check</button>
+	</article>
+    
+    <article class="level-alerts clearfix">
+    	<h1 class="level-alert success" ng-show="checkVictory()">HOOORAY</h1>
+    </article>
+    
 
-    <input type="text" ng-model="regexp"/>
-    <button ng-click="testRegexp()">Check</button>
-
-    <h1 ng-show="checkVictory()">HOOORAY</h1>
+    
 
 </section>
