Add next level function

--- a/app/views/levels/golf.html
+++ b/app/views/levels/golf.html
@@ -16,7 +16,7 @@
 	</article>
     
     <article class="level-alerts clearfix">
-    	<h1 class="level-alert success" ng-show="checkVictory()">HOOORAY</h1>
+    	<h1 class="level-alert success" ng-show="checkVictory()" ng-click="nextLevel(selectedLevel)">You win. Next level</h1>
     </article>
     
 
