--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,7 +4,7 @@
     - Common
  */
 
-* {margin: 0;padding: 0; font-family: 'Open Sans', sans-serif; user-select: none; font-size: 12px;}
+* {margin: 0;padding: 0; font-family: 'Open Sans', sans-serif; user-select: none; font-size: 16px;}
 body {background-color: #0B1317; color: #5F666A;}
 
 
@@ -19,20 +19,31 @@ a {color: #6E7163; text-decoration: none;}
           .game-link {text-decoration: none; color: #333;}
             .game-link:hover {color: #fff;}
   header.page {}
-    header.page h1 {float: left;font-size: 20px; padding: 10px; color:#BFC2C4;}
+    header.page h1 {float: left;font-size: 26px; padding: 10px; color:#BFC2C4;}
     header.page nav {float: right;}
       .header-navigation {list-style: none;}
         .header-navigation li {float: left;}
           .header-navigation li:not(:last-child) {margin-right: 10px;}
-          .header-navigation li a {line-height: 45px; padding: 3px 6px; background-color: #fff;}
+          .header-navigation li a {line-height: 51px; padding: 3px 6px; background-color: #fff;}
             .header-navigation li a:hover {background-color: #CCC9C9;} 
-  .level-window {position: absolute; top: 0; bottom: 0; margin: 60px 1% 0; width: 98%; background-color: #808080; z-index: 10; overflow: auto;}
+  .level-window {position: absolute; top: 0; bottom: 0; margin: 70px 1% 0; width: 98%; background-color: #cacaca; z-index: 10; overflow: auto; }
+    .level-wrapper {float: left;width:50%;}
     .level-window-closer {display: block; position: absolute;top: 0; right: 0;width: 16px;height: 16px;line-height: 16px; text-align: center;cursor:pointer;}
+    
+    h1.level-title {padding: 10px;}
+
+
+
     .level-window ul {list-style: none;}
 
     .level-results {}
-      .level-results ul {float: left;}
-        .level-results ul li {width: 250px;}
+      .level-results ul {float: left;width: 46%; margin: 0 2%;}
+        .level-results ul li {padding: 10px; background-color: #fff;}
+        .level-results ul li:not(:first-child) {margin-top: 10px;}
+    .level-controls {margin: 10px 2% 0;}
+      .level-controls input {position: relative;width: 76%; height: 40px; outline: none;margin-right: 4%;border: none;padding: 0 2%;}
+      .level-controls button {position: relative; width: 15%; height: 40px;outline: none; line-height: 40px; font-size: 16px; color: #FFF; text-align: center; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25); background: #27AE60; border: 0; border-bottom: 2px solid #219D55; cursor: pointer; -webkit-box-shadow: inset 0 -2px #219D55; box-shadow: inset 0 -2px #219D55;}
+        .level-controls button:active {top: 1px; box-shadow: none;}
 
 
 /* ===== Temp styles ===== */
