--- a/app/views/levels/golf.html
+++ b/app/views/levels/golf.html
@@ -1,24 +1,26 @@
 <section ng-controller="GolfCtrl">
-    <h1 class="level-title">{{selectedLevel.name}}</h1>
 
-    <article class="level-results clearfix">
-    	<ul>
-            <li ng-repeat="succ in selectedLevel.data.successed" ng-class="getClass($index, 'successed')">{{succ}}</li>
-        </ul>
-        <ul>
-            <li ng-repeat="fail in selectedLevel.data.failed" ng-class="getClass($index, 'failed')">{{fail}}</li>
-        </ul>
-    </article>
-	
-	<article class="level-controls clearfix">
-		<input type="text" class="regexp-field" ng-model="regexp"/>
-		<button ng-click="testRegexp()">Check</button>
-	</article>
-    
-    <article class="level-alerts clearfix">
-    	<h1 class="level-alert success" ng-show="checkVictory()" ng-click="nextLevel(selectedLevel)">You win. Next level</h1>
-    </article>
-    
+    <h1 class="level-title">{{selectedLevel.name}}</h1>
+	<section class="level-wrapper clearfix">
+	    <article class="level-results clearfix">
+	    	<ul>
+	            <li ng-repeat="succ in selectedLevel.data.successed" ng-class="getClass($index, 'successed')">{{succ}}</li>
+	        </ul>
+	        <ul>
+	            <li ng-repeat="fail in selectedLevel.data.failed" ng-class="getClass($index, 'failed')">{{fail}}</li>
+	        </ul>
+	    </article>
+		<article class="level-controls clearfix">
+			<div class="regexp-field-wrapper">
+				<input type="text" class="regexp-field" ng-model="regexp"/>
+			</div>
+			<button ng-click="testRegexp()">Check</button>
+		</article>
+	    <article class="level-alerts clearfix">
+	    	<h1 class="level-alert success" ng-show="checkVictory()" ng-click="nextLevel(selectedLevel)">You win. Next level</h1>
+	    </article>
+    </section>
+    <section class="level-wrapper clearfix" ng-bind-html="selectedLevel.description"></section>
 
     
 
