--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
         </li>
     </ul>
 	<section class="level-window clearfix"  ng-show="playing">
-		<span class="level-window-closer">x</span>
+		<span class="level-window-closer" ng-click="playing = false">x</span>
     	<div class="clearfix " ng-include="'/views/levels/' + selectedLevel.type + '.html'"></div>
     </section>
 
