--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,7 +41,8 @@ a {color: #6E7163; text-decoration: none;}
         .level-results ul li {padding: 10px; background-color: #fff;}
         .level-results ul li:not(:first-child) {margin-top: 10px;}
     .level-controls {margin: 10px 2% 0;}
-      .level-controls input {position: relative;width: 76%; height: 40px; outline: none;margin-right: 4%;border: none;padding: 0 2%;}
+      .regexp-field-wrapper {float: left; width: 80%;margin-right: 4%;}
+      .level-controls input {position: relative; width: 96%;height: 40px; outline: none;border: none;padding: 0 2%;}
       .level-controls button {position: relative; width: 15%; height: 40px;outline: none; line-height: 40px; font-size: 16px; color: #FFF; text-align: center; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25); background: #27AE60; border: 0; border-bottom: 2px solid #219D55; cursor: pointer; -webkit-box-shadow: inset 0 -2px #219D55; box-shadow: inset 0 -2px #219D55;}
         .level-controls button:active {top: 1px; box-shadow: none;}
 
