--- a/app/views/levels/golf.html
+++ b/app/views/levels/golf.html
@@ -17,7 +17,7 @@
 			<button ng-click="testRegexp()">Check</button>
 		</article>
 	    <article class="level-alerts clearfix">
-	    	<div class="level-alert success" ng-show="checkVictory()">
+	    	<div class="level-alert success" ng-show="victory">
 	    		<p>You win.</p>
 	    		<button class="next-level" ng-click="nextLevel(selectedLevel)">Next level</button>
 	    	</div>
