--- a/app/views/levels/golf.html
+++ b/app/views/levels/golf.html
@@ -4,9 +4,11 @@
 	<section class="level-wrapper clearfix">
 	    <article class="level-results clearfix">
 	    	<ul>
+	    		<li class="list-subtitle">Need to pass</li>
 	            <li class="level-test" ng-repeat="succ in selectedLevel.data.successed" ng-class="getClass($index, 'successed')">{{succ}}</li>
 	        </ul>
 	        <ul>
+	    		<li class="list-subtitle">Need to fail</li>
 	            <li class="level-test" ng-repeat="fail in selectedLevel.data.failed" ng-class="getClass($index, 'failed')">{{fail}}</li>
 	        </ul>
 	    </article>
