--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,7 +27,7 @@ a {color: #6E7163; text-decoration: none;}
           .header-navigation li a {line-height: 51px; padding: 3px 6px; background-color: #fff;}
             .header-navigation li a:hover {background-color: #CCC9C9;} 
   .level-window {position: absolute; top: 0; bottom: 0; margin: 70px 1% 0; width: 98%; background-color: #cacaca; z-index: 10; overflow: auto; }
-    .level-wrapper {float: left;width:50%;}
+    .level-wrapper {float: left;width:50%;position: relative;}
     .level-window-closer {display: block; position: absolute;top: 0; right: 0;width: 32px;height: 32px;line-height: 32px; text-align: center;cursor:pointer;background-color: #fff;}
       .level-window-closer:hover {background-color: #9c9c9c;}
     
@@ -52,6 +52,14 @@ a {color: #6E7163; text-decoration: none;}
       .level-controls input {position: relative; width: 96%;height: 40px; outline: none;border: none;padding: 0 2%;font-size: 20px;}
       .level-controls button {position: relative; width: 15%; height: 40px;outline: none; line-height: 40px; font-size: 16px; color: #FFF; text-align: center; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25); background: #27AE60; border: 0; border-bottom: 2px solid #219D55; cursor: pointer; -webkit-box-shadow: inset 0 -2px #219D55; box-shadow: inset 0 -2px #219D55;}
         .level-controls button:active {top: 1px; box-shadow: none;}
+    
+    .level-alerts {background-color: rgba(39, 174, 96, 0.5);position: absolute;left: 0;right: 0;top: 0;bottom: 0;}
+      .level-alert.success {width: 300px; height: 100px; margin: auto; position: absolute; top: 0; left: 0; right: 0; bottom: 0; text-align: center; color: #FFF; }
+        .level-alert.success p {color: #FFF;text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);font-size: 18px;padding: 5px;}
+        .level-alert.success button {position: relative; width: 150px; height: 40px;outline: none; line-height: 40px; font-size: 16px; color: #FFF; text-align: center; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25); background: #27AE60; border: 0; border-bottom: 2px solid #219D55; cursor: pointer; -webkit-box-shadow: inset 0 -2px #219D55; box-shadow: inset 0 -2px #219D55;}
+          .level-alert.success button:active {top: 1px; box-shadow: none;}
+
+
 
 
 /* ===== Temp styles ===== */
