--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,12 @@
 <div>
-    <ul class="levels-list">
-    	<li ng-repeat="level in levelsData">
-            <a ng-click="loadLevel(level)" class="level-link">{{level.name}}</a>
+    <ul class="levels-list clearfix">
+    	<li ng-repeat="level in levelsData" class='level-list-item clearfix'>
+    		<canvas class='ll-canvas' width='50' height='50'></canvas>
+            <a ng-click="loadLevel(level)" class="level-link clearfix">{{$index+1}}</a>
         </li>
     </ul>
 	<section class="level-window clearfix"  ng-show="playing">
 		<span class="level-window-closer" ng-click="playing = false">x</span>
     	<div class="clearfix " ng-include="'/views/levels/' + selectedLevel.type + '.html'"></div>
     </section>
-
 </div>
