--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div>
     <ul class="levels-list clearfix">
     	<li ng-repeat="level in levelsData" class='level-list-item clearfix'>
-            <level-selector stroke-style="green" corners="7" line-width="2" />
+            <level-selector stroke-style="green" fill-style="#000" corners="6" line-width="2" />
     	</li>
     </ul>
 	<section class="level-window clearfix"  ng-show="playing">
