--- a/views/levelSelector.html
+++ b/views/levelSelector.html
@@ -1,2 +1,1 @@
-<canvas class='ll-canvas' width='50' height='50'></canvas>
-<a ng-click="loadLevel(level)" class="level-link clearfix">{{$index+1}}</a>
+<canvas class="ll-canvas" width="50" height="50"></canvas> <a ng-click="loadLevel(level)" class="level-link clearfix">{{$index+1}}</a>
