--- a/views/levels/golf.html
+++ b/views/levels/golf.html
@@ -1,28 +1,1 @@
-<section ng-controller="GolfCtrl">
-    <h1 class="level-title">{{selectedLevel.name}}</h1>
-	<section class="level-wrapper clearfix">
-	    <article class="level-results clearfix">
-	    	<ul>
-	    		<li class="list-subtitle">Need to pass</li>
-	            <li class="level-test" ng-repeat="succ in selectedLevel.data.successed" ng-class="getClass($index, 'successed')">{{succ}}</li>
-	        </ul>
-	        <ul>
-	    		<li class="list-subtitle">Need to fail</li>
-	            <li class="level-test" ng-repeat="fail in selectedLevel.data.failed" ng-class="getClass($index, 'failed')">{{fail}}</li>
-	        </ul>
-	    </article>
-		<article class="level-controls golf clearfix">
-			<div class="regexp-field-wrapper">
-				<input type="text" class="regexp-field" ng-model="regexp"/>
-			</div>
-			<button ng-click="testRegexp()">Check</button>
-		</article>
-	    <article class="level-alerts clearfix" ng-show="victory">
-	    	<div class="level-alert success" ng-show="victory">
-	    		<p>You win.</p>
-	    		<button class="next-level" ng-click="nextLevel(selectedLevel)">Next level</button>
-	    	</div>
-	    </article>
-    </section>
-    <section class="level-wrapper clearfix" ng-bind-html="selectedLevel.description"></section>
-</section>
+<section ng-controller="GolfCtrl"> <h1 class="level-title">{{selectedLevel.name}}</h1> <section class="level-wrapper clearfix"> <article class="level-results clearfix"> <ul> <li class="list-subtitle">Need to pass</li> <li class="level-test" ng-repeat="succ in selectedLevel.data.successed" ng-class="getClass($index, 'successed')">{{succ}}</li> </ul> <ul> <li class="list-subtitle">Need to fail</li> <li class="level-test" ng-repeat="fail in selectedLevel.data.failed" ng-class="getClass($index, 'failed')">{{fail}}</li> </ul> </article> <article class="level-controls golf clearfix"> <div class="regexp-field-wrapper"> <input type="text" class="regexp-field" ng-model="regexp"> </div> <button ng-click="testRegexp()">Check</button> </article> <article class="level-alerts clearfix" ng-show="victory"> <div class="level-alert success" ng-show="victory"> <p>You win.</p> <button class="next-level" ng-click="nextLevel(selectedLevel)">Next level</button> </div> </article> </section> <section class="level-wrapper clearfix" ng-bind-html="selectedLevel.description"></section> </section>
