--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,6 +6,6 @@
     </ul>
 	<section class="level-window clearfix"  ng-show="playing">
 		<span class="level-window-closer" ng-click="playing = false">×</span>
-    	<div class="clearfix " ng-include="'/views/levels/' + selectedLevel.type + '.html'"></div>
+    	<div class="clearfix " ng-include="'views/levels/' + selectedLevel.type + '.html'"></div>
     </section>
 </div>
